--- a/about.html
+++ b/about.html
@@ -28,10 +28,10 @@
                   <a class="nav-link" aria-current="page" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html">About</a>
+                  <a class="nav-link active" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" href="blog.html">Blog</a>
+                  <a class="nav-link" href="blog.html">Blog</a>
                 </li>                
                 <li class="nav-item">
                   <a class="nav-link" href="contact.html">Contact</a>
