--- a/index.html
+++ b/index.html
@@ -48,6 +48,20 @@
 
   <div class="container marketing">
 
+    <div class="jtron">
+    <div class="p-5 mb-4 bg-light border rounded-3">
+      <div class="container-fluid py-5">
+        <h1 class="display-5 fw-bold">Welcome to my Professional Portfolio</h1>
+        <p class="col-md-8 fs-4">
+          This site is intended to showcase my project history and current works. Currently in my third year of a Bachelor of Computer Science degree, I am
+          actively seeking meaningful employment in the IT space. I am particularly interested in pursuing Network Engineering and Cyber Security.
+        </p>
+      </div>
+    </div>
+  </div>
+    <hr class="featurette-divider">
+
+
     <!-- Three columns of text below the carousel -->
     <div class="row">
       <div class="col-lg-4">
@@ -55,14 +69,14 @@
 
         <h2>LinkedIn Articles</h2>
         <p>Read my collection of published articles on LinkedIn</p>
-        <p><a class="btn btn-secondary" href="https://www.linkedin.com/in/jsbeamish/detail/recent-activity/posts/">View articles &raquo;</a></p>
-        <p><a class="btn btn-secondary" href="https://www.linkedin.com/in/jsbeamish/">View profile &raquo;</a></p>
+        <p><a class="btn btn-secondary" target="_blank" href="https://www.linkedin.com/in/jsbeamish/detail/recent-activity/posts/">View articles &raquo;</a></p>
+        <p><a class="btn btn-secondary" target="_blank" href="https://www.linkedin.com/in/jsbeamish/">View profile &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <img src="images/github.png" class="rounded-circle mx-auto d-block" width="140" height="140" alt="...">
         <h2>GitHub Repo</h2>
         <p>Feel free to peruse my GitHub project repository</p>
-        <p><a class="btn btn-secondary" href="https://github.com/powerpillz">View repository &raquo;</a></p>
+        <p><a class="btn btn-secondary" target="_blank" href="https://github.com/powerpillz">View repository &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <img src="images/youtube.jpg" class="rounded-circle mx-auto d-block" width="140" height="140" alt="...">
@@ -72,7 +86,7 @@
         <p>Making content related to my past and present experiences, covering topics related to
           IT, networking, cyber security, software development, automation, mining, hydraulics, mechanics, auto electrics and more!
         </p>
-        <p><a class="btn btn-secondary" href="https://www.youtube.com/channel/UCGVqMZ2uuz9ZbkK4GNoojJg">View content &raquo;</a></p>
+        <p><a class="btn btn-secondary" target="_blank" href="https://www.youtube.com/channel/UCGVqMZ2uuz9ZbkK4GNoojJg">View content &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
 
@@ -100,7 +114,7 @@
       <div class="col-md-7 order-md-2">
         <h2 class="featurette-heading">MEMS Angle Sensor <span class="text-muted">Arduino & 3D Printing/Design</span></h2>
         <p class="lead">The project that sparked my pursuit of a career in IT. I identified a need for a cheap, easy to use angle system for use on Underground Production Drills.
-          My journey led me to design and 3d print a custom housing to mount a xxxxx, enabling it to connect to the I2C bus of an Arduino Micro-Controller. I began by modifying some 
+          My journey led me to design and 3d print a custom housing to mount an MPU6050 accelerometer/gyroscope, enabling it to connect to the I2C bus of an Arduino Micro-Controller. I began by modifying some 
           open source quad-copter stablising code from github. Before long, I fell in love with coding and enrolled in university to complete a Bachelor of Computer Science.
         </p>
       </div>
