--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
+            <a class="nav-link disabled" href="about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="blog.html">Blog</a>
+            <a class="nav-link disabled" href="blog.html">Blog</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
+            <a class="nav-link disabled" href="contact.html">Contact</a>
           </li>
         </ul>
       </div>
