--- a/blog.html
+++ b/blog.html
@@ -12,6 +12,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!-- Custom styles for this template -->
     <link href="css/bootstrap_mod.css" rel="stylesheet"> 
+    <link href="css/carousel.css" rel="stylesheet">
+
   </head>
 
   <body>
@@ -42,9 +44,23 @@
         </nav>
       </header>
 
+    <div class="container marketing">
 
+      <div class="card text-center">
+        <div class="card-header">
+          Featured
+        </div>
+        <div class="card-body">
+          <h5 class="card-title">Special title treatment</h5>
+          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+        <div class="card-footer text-muted">
+          2 days ago
+        </div>
+      </div>
 
-
+  
     
 
     <!-- Optional JavaScript; choose one of the two! -->
