--- a/blog.html
+++ b/blog.html
@@ -46,21 +46,35 @@
 
     <div class="container marketing">
 
-      <div class="card text-center">
-        <div class="card-header">
-          Featured
+      <div class="py-5 text-center">
+
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="card-body">
+              <!-- Image titled "Red Chameleon" sourced from https://www.pexels.com/photo/red-chameleon-567540/ credit to George Lebada taken June 24 2017 -->
+              <img src="images/blogimages/colorlife1.jpeg" class="mx-auto d-block" width="auto" height="250" alt="Red Chameleon">
+              <br>
+              <h5 class="card-title">Colour Your Life</h5>
+              <p class="card-text">
+                Blog entry touching on some advice I received early on in my career that I have often reflected upon.
+              </p>
+              <a href="#" class="btn btn-primary">Read Post</a>
+            </div>
+          </div>
         </div>
-        <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-        <div class="card-footer text-muted">
-          2 days ago
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Special title treatment</h5>
+              <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+              <a href="#" class="btn btn-primary">Read Post</a>
+            </div>
+          </div>
         </div>
       </div>
 
-  
+    </div>
     
 
     <!-- Optional JavaScript; choose one of the two! -->
